about me update

--- a/index.html
+++ b/index.html
@@ -133,5 +133,28 @@
         </ul>
        <a href=""><button>see project</button></a>
     </section>
+    <section>
+    <div class="title"><h1 class="headlineTitle">About Myself</h1>
+        <p class="headlineText"> Hello,I'm a Software developer! I can help you build a product, feature 
+            or website look through some of my Work and experience! if you like what you see and have a project you need coded, 
+            dont hesitate to contact me. </p>
+    </div>
+        <h3> LET'S CONNECT </h3>
+        <ul class="connect" >
+            <li>
+                <a href="https://twitter.com/@lola_wealthy"><i class="fa-brands fa-twitter socials"></i></a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/shotola-ololade-946b95241/"><i class="fa-brands fa-linkedin socials"></i></a>
+            </li>
+            <li>
+                <a href="ololadeshot@gmail.com"><i class="fa-solid fa-envelope socials"></i></a>
+            </li>
+            <li>
+                <a href="https://github.com/lolashot"><i class="fa-brands fa-github socials"></i></a>
+            </li>
+        </ul>
+        <a href=""><button>Get My Resume</button></a>
+        </section>
 </body>
 </html>
