--- a/index.html
+++ b/index.html
@@ -156,5 +156,35 @@
         </ul>
         <a href=""><button>Get My Resume</button></a>
         </section>
+        <section>
+            <div>
+                <div class="flex1">
+                <h2 class="text">Languages</h2>
+                <img src="assets/Icon - Chevron - Down - Larger.svg" class= "bg" alt="">
+                </div>
+                <div class="flex">
+                    <img src="assets/Ellipse 1 (1).svg" class="bg" alt="">
+                    <h3 class="bg">javascript</h3>
+                </div>
+                <div class="flex">
+                    <img src="assets/Ellipse 1 (3).svg" class="bg" alt="">
+                    <h3 class="bg">HTML</h3>
+                </div>
+                <div class="flex">
+                    <img src="assets/Ellipse 1 (2).svg" class="bg" alt="">
+                    <h3 class="bg">CSS</h3>
+                </div>
+                <div class="flex1">
+                    <h2 class="text">Frameworks</h2>
+                    <img src="assets/Icon - Chevron - Right - Larger.svg" class= "bg" alt="">
+                    </div>  
+                <hr>
+                    <div class="flex1">
+                        <h2 class="text">Skills</h2>
+                        <img src="assets/Icon - Chevron - Right - Larger.svg" class= "bg" alt="">
+                        </div>
+                    <hr>
+                </div>
+        </section>
 </body>
 </html>
