--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                <div class="lang1"><a href="">html</a></div>
             </li>
             <li>
-               <div class="lang1" ><a href=>css</a></div>
+               <div class="lang1" ><a href="#">css</a></div>
             </li>
             <li>
                 <div class="lang1"><a href="">javascript</a></div>
@@ -189,34 +189,34 @@
             <div>
                 <div class="flex1">
                 <h2 class="text">Languages</h2>
-                <img src="assets/Icon - Chevron - Down - Larger.svg" class= "bg" alt="">
+                <img src="assets/Icons/down.png" class= "bg" alt="">
                 </div>
                 <div class="flex">
-                    <img src="assets/Ellipse 1 (1).svg" class="bg" alt="">
+                    <img src="assets/Ellipse.png" class="bg" alt="">
                     <h3 class="bg">javascript</h3>
                 </div>
                 <div class="flex">
-                    <img src="assets/Ellipse 1 (3).svg" class="bg" alt="">
+                    <img src="assets/Ellipse1.png" class="bg" alt="">
                     <h3 class="bg">HTML</h3>
                 </div>
                 <div class="flex">
-                    <img src="assets/Ellipse 1 (2).svg" class="bg" alt="">
+                    <img src="assets/Ellipse2.png" class="bg" alt="">
                     <h3 class="bg">CSS</h3>
                 </div>
                 <div class="flex1">
                     <h2 class="text">Frameworks</h2>
-                    <img src="assets/Icon - Chevron - Right - Larger.svg" class= "bg" alt="">
+                    <img src="assets/Right.png" class= "bg" alt="">
                     </div>  
                 <hr>
                     <div class="flex1">
                         <h2 class="text">Skills</h2>
-                        <img src="assets/Icon - Chevron - Right - Larger.svg" class= "bg" alt="">
+                        <img src="assets/Right.png" class= "bg" alt="">
                         </div>
                     <hr>
                     <section class="bgCard">
-                        <img src="assets/contact form shapes-mobile.png" class="contact-shapes" alt="">
+                        <img src="assets/shapes.png" class="contact-shapes" alt="">
                         <div class="center">
-                        <h1 class="contactTitle">Contact me</h1>
+                        <h3 class="contactTitle">Contact me</h3>
                         <p class="contactText">if you have an application you are interested in developing,
                          a feature that you need built or a project that needs coding.i'd love to help with it
                         </p>
