--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
            <div class="lang1"><a href="">html</a></div>
         </li>
         <li>
-           <div class="lang1" ><a href=>css</a></div>
+           <div class="lang1" ><a href="#">css</a></div>
         </li>
         <li>
-            <div class="lang1"><a href="">javascript</a></div>
+            <div class="lang1"><a href="#">javascript</a></div>
         </li>
     </ul>
     <a class="last"><p>Get My Resume</p></a>
