update Html and Css file as requested by the Reviewer.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,44 @@
     <title> completePortfolio</title>
 </head>
 <body>
+    <header>        
+        <nav >
+            <ul class="header">
+                <li>
+                    <a href="#" class="headerBrand">My Logo</a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa-solid fa-bars icon"></i></a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section class="imgdiv">
+        <img src="assets/header-shapes-mobile@2x.svg" class="shapes" alt="">
+        <div class="title1"><h1 class="headlineTitle1">I'm Lola Glad to See You!</h1>
+        <p class="headlineText1">I'm a Software developer! I can help you build a product, feature 
+            or website look through some of my Work and experience! if you like what you see and have a project you need coded, 
+            dont hesitate to contact me. </p>
+    </div>
+        <h3 class="connectTitle"> LET'S CONNECT </h3>
+        <ul class="connectt">
+            <li>
+                <a href="#"><img src="assets/Vector3.png"class="socialls" alt=""></a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/shotola-ololade-946b95241/"><i class="fa-brands fa-linkedin socialls"></i></a>
+            </li>
+            <li>
+                <a href="#"><img src="assets/Vector1.png"class="socialls" alt=""></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com/@lola_wealthy"><img src="assets/Vector2.png"class="socialls" alt=""></i></a>
+            </li>
+            <li>
+                <a href="ololadeshot@gmail.com"><img src="assets/Vector.png"class="socialls" alt=""></i></a>
+            </li>
+        </ul>
+    </section>
     <main class="grid">
     
     <section class="card">
@@ -168,6 +206,7 @@
             or website look through some of my Work and experience! if you like what you see and have a project you need coded, 
             dont hesitate to contact me. </p>
     </div>
+    <section class="letusconnect">
         <h3 class="connecthead"> LET'S CONNECT </h3>
         <ul class="connect" >
             <li>
@@ -183,6 +222,7 @@
                 <a href="https://github.com/lolashot"><i class="fa-brands fa-github socials"></i></a>
             </li>
         </ul>
+    </section>
         <a class="last"><p>Get My Resume</p></a>
     </section>
         <section class="card">
@@ -191,22 +231,24 @@
                 <h2 class="text">Languages</h2>
                 <img src="assets/Icons/down.png" class= "bg" alt="">
                 </div>
+                <section>
                 <div class="flex">
                     <img src="assets/Ellipse.png" class="bg" alt="">
-                    <h3 class="bg">javascript</h3>
+                    <h3 class="bg letusconnect">javascript</h3>
                 </div>
                 <div class="flex">
                     <img src="assets/Ellipse1.png" class="bg" alt="">
-                    <h3 class="bg">HTML</h3>
+                    <h3 class="bg letusconnect">HTML</h3>
                 </div>
                 <div class="flex">
                     <img src="assets/Ellipse2.png" class="bg" alt="">
-                    <h3 class="bg">CSS</h3>
+                    <h3 class="bg letusconnect">CSS</h3>
                 </div>
                 <div class="flex1">
                     <h2 class="text">Frameworks</h2>
                     <img src="assets/Right.png" class= "bg" alt="">
-                    </div>  
+                    </div>
+                </section>  
                 <hr>
                     <div class="flex1">
                         <h2 class="text">Skills</h2>
