--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <section class="imgdiv">
-        <img src="assets/header-shapes-mobile@2x.svg" class="shapes" alt="">
+        <img src="assets/header-shapes-mobile@2x.svg" class="shapes"alt="">
         <div class="title1"><h1 class="headlineTitle1">I'm Lola Glad to See You!</h1>
         <p class="headlineText1">I'm a Software developer! I can help you build a product, feature 
             or website look through some of my Work and experience! if you like what you see and have a project you need coded, 
@@ -31,19 +31,19 @@
         <h3 class="connectTitle"> LET'S CONNECT </h3>
         <ul class="connectt">
             <li>
-                <a href="#"><img src="assets/Vector3.png"class="socialls" alt=""></a>
+                <a href="#"><img src="assets/Vector3.png"class="socialls"alt=""></a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/in/shotola-ololade-946b95241/"><i class="fa-brands fa-linkedin socialls"></i></a>
             </li>
             <li>
-                <a href="#"><img src="assets/Vector1.png"class="socialls" alt=""></i></a>
+                <a href="#"><img src="assets/Vector1.png"class="socialls"alt=""></a>
             </li>
             <li>
-                <a href="https://twitter.com/@lola_wealthy"><img src="assets/Vector2.png"class="socialls" alt=""></i></a>
+                <a href="https://twitter.com/@lola_wealthy"><img src="assets/Vector2.png"class="socialls" alt=""></a>
             </li>
             <li>
-                <a href="ololadeshot@gmail.com"><img src="assets/Vector.png"class="socialls" alt=""></i></a>
+                <a href="ololadeshot@gmail.com"><img src="assets/Vector.png"class="socialls"alt=""></a>
             </li>
         </ul>
     </section>
