made corrections to display images and icons properly

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href="#"><img src="assets/Vector3.png" class="socialls" alt=""></a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/shotola-ololade-946b95241/"><i class="fa-brands fa-linkedin socialls"></i></a>
+                <a href="https://www.linkedin.com/in/shotola-ololade-946b95241/"><img src="assets/vector4.png" class="socialls" alt=""></a>
             </li>
             <li>
                 <a href="#"><img src="assets/Vector1.png" class="socialls" alt=""></a>
@@ -89,7 +89,7 @@
     
     <section  class="card">
         <div>        
-            <img src="assets/Snapshoot1.png" class="bg" alt="">
+            <img src="assets/snapshoot1.png" class="bg" alt="">
         </div>
         <div class="title"><h1 class="headlineTitle">Multi-Post Stories.</h1>
         <ul class="items">
@@ -208,18 +208,21 @@
     </div>
     <section class="letusconnect">
         <h3 class="connecthead"> LET'S CONNECT </h3>
-        <ul class="connect" >
+        <ul class="connect">
             <li>
-                <a href="https://twitter.com/@lola_wealthy"><i class="fa-brands fa-twitter socials"></i></a>
+                <a href="#"><img src="assets/Vector3.png" class="socials" alt=""></a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/shotola-ololade-946b95241/"><i class="fa-brands fa-linkedin socials"></i></a>
+                <a href="https://www.linkedin.com/in/shotola-ololade-946b95241/"><img src="assets/vector4.png" class="socials" alt=""></a>
             </li>
             <li>
-                <a href="ololadeshot@gmail.com"><i class="fa-solid fa-envelope socials"></i></a>
+                <a href="#"><img src="assets/Vector1.png" class="socials" alt=""></a>
             </li>
             <li>
-                <a href="https://github.com/lolashot"><i class="fa-brands fa-github socials"></i></a>
+                <a href="https://twitter.com/@lola_wealthy"><img src="assets/Vector2.png" class="socials" alt=""></a>
+            </li>
+            <li>
+                <a href="ololadeshot@gmail.com"><img src="assets/Vector.png" class="socials" alt=""></a>
             </li>
         </ul>
     </section>
