update contact section

--- a/index.html
+++ b/index.html
@@ -259,17 +259,18 @@
                         </div>
                     <hr>
                     <section class="bgCard">
-                        <img src="assets/shapes.png" class="contact-shapes" alt="">
+                        <!-- <img src="assets/shapes.png" class="contact-shapes" alt=""> -->
                         <div class="center">
                         <h3 class="contactTitle">Contact me</h3>
                         <p class="contactText">if you have an application you are interested in developing,
                          a feature that you need built or a project that needs coding.i'd love to help with it
                         </p>
-                        <div class="card2">lola</div>
-                        <div class="card2"><a href="">ololadeshot@gmail.com</a></div>
-                        <div class="card3">Write your message here</div>
                         </div>
-                        <a class="last"><p>Get In Touch</p></a>
+                        <input class="card2" placeholder="Alex Usifo" type="text" name="" id="">
+                        <input class="card2" placeholder="ololadeshot@gmail.com" type="email" name="" id="">
+
+                        <textarea id="msg" class="card3" placeholder="write your message here..." name="user_message"></textarea>
+                        <a class="card4 last"><p>Get In Touch</p></a>
                         <div class="lowestdiv">
                             <div class="content"></div>
                         </div>
