update contact section

--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
                         <img src="assets/Right.png" class= "bg" alt="">
                         </div>
                     <hr>
+                    </div>
                     <section class="bgCard">
                         <!-- <img src="assets/shapes.png" class="contact-shapes" alt=""> -->
                         <div class="center">
@@ -270,14 +271,11 @@
                         <input class="card2" placeholder="ololadeshot@gmail.com" type="email" name="" id="">
 
                         <textarea id="msg" class="card3" placeholder="write your message here..." name="user_message"></textarea>
-                        <a class="card4 last"><p>Get In Touch</p></a>
+                        <a class="last"><p>Get In Touch</p></a>
                         <div class="lowestdiv">
                             <div class="content"></div>
                         </div>
                     </section>
-                    
-                </div>
-                
-        </section>
+                </section>
 </body>
 </html>
