--- a/index.html
+++ b/index.html
@@ -261,19 +261,24 @@
                     </div>
                     
         <section class="bgCard">
-                        <img src="assets/shapes/contactShapes.png" class="contactShapes" alt="">
-                        
+                        <img src="assets/shapes/Rectangle 4.png" class="rectangle4" alt="">
+                        <img src="assets/shapes/Ellipse 12.png" class="ellipse12" alt="">
+                        <img src="assets/shapes/Ellipse 3.png" class="ellipse3" alt="">
+                        <img src="assets/shapes/Rectangle 7.png" class="rectangle7" alt="">
+                        <img src="assets/shapes/Ellipse 5.png" class="ellipse5" alt="">
                         <div class="center">
                         <h3 class="contactTitle">Contact me</h3>
                         <p class="contactText">if you have an application you are interested in developing,
                          a feature that you need built or a project that needs coding.i'd love to help with it
                         </p>
                         </div>
-                        <form action="" >
-                        <input class="card2" required placeholder="Alex Usifo" maxlength="30" type="text" name="" id="">
-                        <input class="card2" required placeholder="ololadeshot@gmail.com" type="email" name="" id="">
-
-                        <textarea id="msg" class="card3" maxlength="500" placeholder="write your message here..." type="textarea" name="user_message"></textarea>
+                        <form
+                         action="https://formspree.io/f/xeqdoedo"
+                        method="POST"
+                         >
+                        <input class="card2" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" id="">
+                        <input class="card2" required placeholder="ololadeshot@gmail.com" type="email" name="email" id="">
+                        <textarea id="msg" class="card3" required maxlength="500" placeholder="write your message here..." type="textarea" name="message"></textarea>
                         <button class="last" type="submit">Get In Touch</button>
                         <div class="lowestdiv">
                             <div class="content"></div>
