--- a/index.html
+++ b/index.html
@@ -261,11 +261,7 @@
                     </div>
                     
         <section class="bgCard">
-                        <img src="assets/shapes/Rectangle 4.png" class="rectangle4" alt="">
-                        <img src="assets/shapes/Ellipse 12.png" class="ellipse12" alt="">
-                        <img src="assets/shapes/Ellipse 3.png" class="ellipse3" alt="">
-                        <img src="assets/shapes/Rectangle 7.png" class="rectangle7" alt="">
-                        <img src="assets/shapes/Ellipse 5.png" class="ellipse5" alt="">
+                        <img src="assets/shapes/contactShapes.png" class="contactShapes" alt="">
                         <div class="center">
                         <h3 class="contactTitle">Contact me</h3>
                         <p class="contactText">if you have an application you are interested in developing,
