update contact-section with some of Reviewer's corrections

--- a/index.html
+++ b/index.html
@@ -267,20 +267,18 @@
                         <p class="contactText">if you have an application you are interested in developing,
                          a feature that you need built or a project that needs coding.i'd love to help with it
                         </p>
-                        </div>
                         <form
                          action="https://formspree.io/f/xeqdoedo"
-                        method="POST"
+                        method="POST" 
                          >
-                            <input class="card2" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" >
-                            <input class="card2" required placeholder="ololadeshot@gmail.com" type="email" name="email" >
-                            <textarea id="msg" class="card3" required maxlength="500" placeholder="write your message here..." name="message"></textarea>
-                            <button class="last" type="submit">Get In Touch</button>
-                        <div class="lowestdiv">
-                            <div class="content"></div>
-                        </div>
+                        <ul>
+                            <li><input class="card2" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" ></li>
+                            <li><input class="card2" required placeholder="ololadeshot@gmail.com" type="email" name="email" ></li>
+                            <li><textarea id="msg" class="card3" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
+                            <li><button class="last" type="submit">Get In Touch</button></ul>
+                        </ul>
                     </form>
+                    </div>
                     </section>
-                </section>
 </body>
 </html>
