--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                     </div>
                     
         <section class="bgCard">
-                        <img src="assets/shapes/contactShapes.png" class="contactShapes" alt="">
+                        <!-- <img src="assets/shapes/contactShapes.png" class="contactShapes" alt=""> -->
                         <div class="center">
                         <h3 class="contactTitle">Contact me</h3>
                         <p class="contactText">if you have an application you are interested in developing,
