fix weblint errors

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                         </div>
                     <hr>
                     </div>
-                    
+                   </section> 
         <section class="bgCard">
                         <!-- <img src="assets/shapes/contactShapes.png" class="contactShapes" alt=""> -->
                         <div class="center">
@@ -275,7 +275,7 @@
                             <li><input class="card2" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" ></li>
                             <li><input class="card2" required placeholder="ololadeshot@gmail.com" type="email" name="email" ></li>
                             <li><textarea id="msg" class="card3" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
-                            <li><button class="last" type="submit">Get In Touch</button></ul>
+                            <li><button class="last" type="submit">Get In Touch</button></li>
                         </ul>
                     </form>
                     </div>
