update on desktop

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
             </ul>
         </nav>
     </header>
+    <header class="header1">
+        <a href="#" class="logo">My Logo</a>
+        <nav> 
+            <ul class="navigation">
+                <li><a href="#banner">Portfolio</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#menu">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <section class="imgdiv">
         <img src="assets/header-shapes-mobile@2x.svg" class="shapes" alt="">
         <div class="title1"><h1 class="headlineTitle1">I'm Lola Glad to See You!</h1>
@@ -46,6 +56,32 @@
                 <a href="ololadeshot@gmail.com"><img src="assets/Vector.png" class="socialls" alt=""></a>
             </li>
         </ul>
+    </section>
+    <section class="banner" id="banner">
+        <div class="content">
+            <h1 class="headlineTitle1">I'm Lola Glad to See You!</h1>
+            <p class="headlineText1">I'm a Software developer! I can help you build a product, feature 
+            or website look through some of my Work and experience! if you like what you see and have a project you need coded, 
+            dont hesitate to contact me. </p>
+            <h3 class="connectTitle"> LET'S CONNECT </h3>
+        <ul class="connectt">
+            <li>
+                <a href="#"><img src="assets/Vector3.png" class="socialls" alt=""></a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/shotola-ololade-946b95241/"><img src="assets/vector4.png" class="socialls" alt=""></a>
+            </li>
+            <li>
+                <a href="#"><img src="assets/Vector1.png" class="socialls" alt=""></a>
+            </li>
+            <li>
+                <a href="https://twitter.com/@lola_wealthy"><img src="assets/Vector2.png" class="socialls" alt=""></a>
+            </li>
+            <li>
+                <a href="ololadeshot@gmail.com"><img src="assets/Vector.png" class="socialls" alt=""></a>
+            </li>
+        </ul>
+        </div>
     </section>
     <main class="grid">
     
