--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <a class="last"><p>Get My Resume</p></a>
     </section>
     <section class="cardd">
-      <div>  
+      <div class="tonic">  
         <div>        
             <img src="assets/Snapshoot.png" class="bg" alt="">
         </div>
