--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                     </li>
                 </ul>
             </div>
-                <a class="last"><p>Get My Resume</p></a>
+            <a><button class="but">See Project</button></a>
             </div>
                 <div class="">
                     <div>
