update index.html with linter corrections

--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
     <a class="last"><p>Get My Resume</p></a>
 </section>
     </main>
-    <main class="gridd">
+    <section class="gridd">
         <section class="cardd cardd1">
             <div class="tonic">
             <div>        
-                <img src="assets/desktop/Snapshoot Portfolio.png" class="" alt="">
+                <img src="assets/desktop/SnapshootPortfolio.png" class="" alt="">
             </div>
             <div class="rightItems">
             <div class="title"><h1 class="headlineTitle">Tonic</h1>
@@ -273,7 +273,7 @@
                     <div class="lang1"><a href="#" class="">javascript</a></div>
                 </li>
             </ul>
-            <a><button class="but">See Project</button></a>
+            <button type="button" class="but">See Project</button>
         </div>
         </div>
         </section>
@@ -314,17 +314,17 @@
                     <div class="lang1"><a href="#" class="">javascript</a></div>
                 </li>
             </ul>
-            <a><button class="but">See Project</button></a>
+            <a><button type="button" class="but">See Project</button></a>
             </div>
             <div>        
-                <img src="assets/desktop/Snapshoot Portfolio2.png" class="bg" alt="">
+                <img src="assets/desktop/SnapshootPortfolio2.png" class="bg" alt="">
             </div>
         </div>
         </section>
         <section class="cardd">
             <div class="tonic">
             <div>        
-                <img src="assets/desktop/Snapshoot Portfolio3.png" class="bg" alt="">
+                <img src="assets/desktop/SnapshootPortfolio3.png" class="bg" alt="">
             </div>
             <div class="rightItems">
             <div class="title"><h1 class="headlineTitle">Facebook 360</h1>
@@ -361,14 +361,14 @@
                     <div class="lang1"><a href="#" class="">javascript</a></div>
                 </li>
             </ul>
-            <a><button class="butt">See Project</button></a>
+            <a><button type="button" class="butt">See Project</button></a>
             </div>
         </div>
         </section>
         <section class="cardd">
             <div class="tonic">
             <div>
-            <div class="title"><h1 class="headlineTitle">Uber Navigation</h1>
+            <div class="title"><h3 class="headlineTitle">Uber Navigation</h3>
             <ul class="items">
                 <li class="theli">
                     <a href="#" class="item1">UBER</a>
@@ -402,14 +402,14 @@
                     <div class="lang1"><a href="#" class="">javascript</a></div>
                 </li>
             </ul>
-            <a><button class="but">See Project</button></a>
+            <a><button type="button" class="but">See Project</button></a>
             </div>
             <div>        
-                <img src="assets/desktop/Snapshoot Portfolio4.png" class="bg" alt="">
+                <img src="assets/desktop/SnapshootPortfolio4.png" class="bg" alt="">
             </div>
         </div>
         </section>
-        </main>
+        </section>
     <section class="card">
     <div class="title"><h1 class="headlineTitle">About Myself</h1>
         <p class="headlineText"> Hello,I'm a Software developer! I can help you build a product, feature 
@@ -483,7 +483,7 @@
                         <ul>
                             <li><input class="card2" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" ></li>
                             <li><input class="card2" required placeholder="ololadeshot@gmail.com" type="email" name="email" ></li>
-                            <li><textarea id="msg" class="card3" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
+                            <li><textarea class="card3" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
                             <li><button class="last" type="submit">Get In Touch</button></li>
                         </ul>
                         </form>
@@ -518,7 +518,7 @@
                     </li>
                 </ul>
             </div>
-            <a><button class="but">See Project</button></a>
+            <a><button type="button" class="but">See Project</button></a>
             </div>
                 <div class="">
                     <div>
@@ -567,7 +567,7 @@
                                 <ul>
                                     <li><input class="card2" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" ></li>
                                     <li><input class="card2" required placeholder="ololadeshot@gmail.com" type="email" name="email" ></li>
-                                    <li><textarea id="msg" class="card3" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
+                                    <li><textarea class="card3" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
                                     <li><button class="lastt" type="submit">Get In Touch</button></li>
                                 </ul>
                                 </form>
