Update index.html with linter correction

--- a/index.html
+++ b/index.html
@@ -236,13 +236,13 @@
 </section>
     </main>
     <section class="gridd">
-        <section class="cardd cardd1">
+        <div class="cardd cardd1">
             <div class="tonic">
             <div>        
                 <img src="assets/desktop/SnapshootPortfolio.png" class="" alt="">
             </div>
             <div class="rightItems">
-            <div class="title"><h1 class="headlineTitle">Tonic</h1>
+            <div class="title"><h3 class="headlineTitle">Tonic</h3>
             <ul class="items">
                 <li class="theli">
                     <a href="#" class="item1">CANOPY</a>
@@ -276,8 +276,8 @@
             <button type="button" class="but">See Project</button>
         </div>
         </div>
-        </section>
-        <section class="cardd">
+    </div>
+        <div class="cardd">
             <div class="tonic">
             <div>
             <div class="title"><h1 class="headlineTitle">Multi-Post Stories</h1>
@@ -314,14 +314,14 @@
                     <div class="lang1"><a href="#" class="">javascript</a></div>
                 </li>
             </ul>
-            <a><button type="button" class="but">See Project</button></a>
+            <button type="button" class="but">See Project</button>
             </div>
             <div>        
                 <img src="assets/desktop/SnapshootPortfolio2.png" class="bg" alt="">
             </div>
         </div>
-        </section>
-        <section class="cardd">
+    </div>
+        <div class="cardd">
             <div class="tonic">
             <div>        
                 <img src="assets/desktop/SnapshootPortfolio3.png" class="bg" alt="">
@@ -364,8 +364,8 @@
             <a><button type="button" class="butt">See Project</button></a>
             </div>
         </div>
-        </section>
-        <section class="cardd">
+    </div>
+        <div class="cardd">
             <div class="tonic">
             <div>
             <div class="title"><h3 class="headlineTitle">Uber Navigation</h3>
@@ -408,8 +408,8 @@
                 <img src="assets/desktop/SnapshootPortfolio4.png" class="bg" alt="">
             </div>
         </div>
-        </section>
-        </section>
+    </div>
+    </section>
     <section class="card">
     <div class="title"><h1 class="headlineTitle">About Myself</h1>
         <p class="headlineText"> Hello,I'm a Software developer! I can help you build a product, feature 
