--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div>        
             <img src="assets/Snapshoot2.png" class="bg" alt="">
         </div>
-        <div class="title"><h1 class="headlineTitle">Tonic</h1>
+        <div class="title"><h3 class="headlineTitle">Tonic</h3>
         <ul class="items">
             <li class="theli">
                 <a class="item1">CANOPY</a>
@@ -361,7 +361,7 @@
                     <div class="lang1"><a href="#" class="">javascript</a></div>
                 </li>
             </ul>
-            <a><button type="button" class="butt">See Project</button></a>
+            <button type="button" class="butt">See Project</button>
             </div>
         </div>
     </div>
