--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <div class="cardd">
             <div class="tonic">
             <div>
-            <div class="title"><h1 class="headlineTitle">Multi-Post Stories</h1>
+            <div class="title"><h3 class="headlineTitle">Multi-Post Stories</h3>
             <ul class="items">
                 <li class="theli">
                     <a href="#" class="item1">FACEBOOK</a>
@@ -402,7 +402,7 @@
                     <div class="lang1"><a href="#" class="">javascript</a></div>
                 </li>
             </ul>
-            <a><button type="button" class="but">See Project</button></a>
+            <button type="button" class="but">See Project</button>
             </div>
             <div>        
                 <img src="assets/desktop/SnapshootPortfolio4.png" class="bg" alt="">
