--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <section class="imgdiv">
         <img src="assets/header-shapes-mobile@2x.svg" class="shapes" alt="">
-        <div class="title1"><h1 class="headlineTitle1">I'm Lola Glad to See You!</h1>
+        <div class="title1"><h3 class="headlineTitle1">I'm Lola Glad to See You!</h3>
         <p class="headlineText1">I'm a Software developer! I can help you build a product, feature 
             or website look through some of my Work and experience! if you like what you see and have a project you need coded, 
             dont hesitate to contact me. </p>
@@ -59,7 +59,7 @@
         </header>
         <div class="banner" id="banner">
          <div class="content">
-            <h1 class="headlineTitle1">I'm Lola Glad to See You!</h1>
+            <h3 class="headlineTitle1">I'm Lola Glad to See You!</h3>
             <p class="headlineText1">I'm a Software developer! I can help you build a product, feature 
             or website look through some of my Work and experience! if you like what you see and have a project you need coded, 
             dont hesitate to contact me. </p>
@@ -89,7 +89,7 @@
         <div>        
             <img src="assets/Snapshoot.png" class="bg" alt="">
         </div>
-        <div class="title"><h1 class="headlineTitle">Tonic</h1>
+        <div class="title"><h3 class="headlineTitle">Tonic</h3>
         <ul class="items">
             <li class="theli">
                 <a href="#" class="item1">CANOPY</a>
@@ -126,7 +126,7 @@
         <div>        
             <img src="assets/snapshoot1.png" class="bg" alt="">
         </div>
-        <div class="title"><h1 class="headlineTitle">Multi-Post Stories.</h1>
+        <div class="title"><h3 class="headlineTitle">Multi-Post Stories.</h3>
         <ul class="items">
             <li class="theli">
                 <a class="item1">CANOPY</a>
@@ -201,7 +201,7 @@
         <div>        
             <img src="assets/Snapshoot3.png" class="bg" alt="">
         </div>
-        <div class="title"><h1 class="headlineTitle">Multi-Post Stories</h1>
+        <div class="title"><h3 class="headlineTitle">Multi-Post Stories</h3>
         <ul class="items">
             <li class="theli">
                 <a class="item1">CANOPY</a>
@@ -327,7 +327,7 @@
                 <img src="assets/desktop/SnapshootPortfolio3.png" class="bg" alt="">
             </div>
             <div class="rightItems">
-            <div class="title"><h1 class="headlineTitle">Facebook 360</h1>
+            <div class="title"><h3 class="headlineTitle">Facebook 360</h3>
             <ul class="items">
                 <li class="theli">
                     <a href="#" class="item1">FACEBOOK</a>
@@ -411,7 +411,7 @@
     </div>
     </section>
     <section class="card">
-    <div class="title"><h1 class="headlineTitle">About Myself</h1>
+    <div class="title"><h3 class="headlineTitle">About Myself</h3>
         <p class="headlineText"> Hello,I'm a Software developer! I can help you build a product, feature 
             or website look through some of my Work and experience! if you like what you see and have a project you need coded, 
             dont hesitate to contact me. </p>
@@ -493,7 +493,7 @@
         <section class="cardd">
          <div class="contact">
             <div>
-            <div class="title"><h1 class="headlineTitle">About Myself</h1>
+            <div class="title"><h3 class="headlineTitle">About Myself</h3>
                 <p class="headlineText"> Hello,I'm a Software developer! I can help you build a product, feature 
                     or website look through some of my Work and experience! if you like what you see and have a project you need coded, 
                     dont hesitate to contact me. </p>
@@ -518,7 +518,7 @@
                     </li>
                 </ul>
             </div>
-            <a><button type="button" class="but">See Project</button></a>
+            <button type="button" class="but">See Project</button>
             </div>
                 <div class="">
                     <div>
