created navbar for desktop

--- a/index.html
+++ b/index.html
@@ -9,17 +9,14 @@
     <title> completePortfolio</title>
 </head>
 <body>
-    <header>        
-        <nav >
-            <ul class="header">
-                <li>
-                    <a href="#" class="headerBrand">My Logo</a>
-                </li>
-                <li>
-                    <a href="#"><i class="fa-solid fa-bars icon"></i></a>
-                </li>
-            </ul>
-        </nav>
+    <header class="header header1">
+        <a href="#" class="headerBrand">My Logo</a>
+        <div class="iconn"><a href="#"><i class="fa-solid fa-bars icon"></i></a></div>
+        <ul class="navigation">
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#" >Contact</a></li>
+        </ul>
     </header>
     <section class="imgdiv">
         <img src="assets/header-shapes-mobile@2x.svg" class="shapes" alt="">
