--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#" >Contact</a></li>
         </ul>
     </header>
-    <section class="imgdiv">
+    <section class="imgdiv imgdivv">
         <img src="assets/header-shapes-mobile@2x.svg" class="shapes" alt="">
         <div class="title1"><h1 class="headlineTitle1">I'm Lola Glad to See You!</h1>
         <p class="headlineText1">I'm a Software developer! I can help you build a product, feature 
