update index.html and style.css with linter corrections

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                         <ul>
                             <li><input class="card2 form-field" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" ></li>
                             <li><input class="card2 form-field" required placeholder="ololadeshot@gmail.com" type="email" name="email" ></li>
-                            <li><textarea id="msg form-field" class="card3" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
+                            <li><textarea id="" class="card3" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
                             <li><button class="last form-field" type="submit">Get In Touch</button></li>
                         </ul>
                         </form>
@@ -522,11 +522,10 @@
                  method="POST" 
                  >
                 <ul>
-                    <li><input class="card2" style="width: 90%" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" ></li>
+                    <li><input class="card2" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" ></li>
                     <li><input class="card2" required placeholder="ololadeshot@gmail.com" type="email" name="email" ></li>
                     <li><textarea id="msg" class="card3" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
                     <li><button class="last" type="submit">Get In Touch</button></li>
-                    </li>
                 </ul>
               <div class="last-btn">
                 <div class="btn-parent">
