update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                         <ul>
                             <li><input class="card2 form-field" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" ></li>
                             <li><input class="card2 form-field" required placeholder="ololadeshot@gmail.com" type="email" name="email" ></li>
-                            <li><textarea id="" class="card3" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
+                            <li><textarea class="card3" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
                             <li><button class="last form-field" type="submit">Get In Touch</button></li>
                         </ul>
                         </form>
