update style.css and index

--- a/index.html
+++ b/index.html
@@ -12,13 +12,19 @@
     <div class="parent">  
         <header class="header">
             <a href="#" class="headerBrand">My Logo</a>
-            <a href="#"><i class="fa-solid fa-bars icon hamburger"></i></a>
+            <a href="#"><i class="fa-solid fa-bars icon hamburger"></i></a>         
+          
+        </header>
+
+        <header class="header-top">
+            <a href="#" class="headerBrand">My Logo</a>
             <ul class="navigation">
                 <li><a href="#">Portfolio</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </header>
+        
     <div class="hero-bg"></div>
     <div class="hero">
     <section class="imgdiv">
