--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c5af90d277.js" crossorigin="anonymous"></script>
-    <title> completePortfolio</title>
+    <title>Complete Portfolio</title>
 </head>
 <body>
     <div class="parent">  
@@ -59,7 +59,7 @@
         <div class="card-child">
         <div class="card-child-img">        
             <img src="assets/Snapshoot.png" class="bg" alt="">
-            <img src="assets/desktop-images/SnapshootPortfolio.png" class="bg-desktop" alt="">
+            <img src="assets/desktop-images/SnapshootPortfolio.png" class="bg-desktop" alt="an image of nature">
         </div>
         <div class="card-child-content">
         <div class="title"><h1 class="headlineTitle">Tonic</h1>
@@ -193,7 +193,7 @@
                 </div>
             </div>
         <div class="card-child-img">        
-            <img src="assets/desktop-images/SnapshootPortfolio1.png" class="bg bg-desktop" alt="">
+            <img src="assets/desktop-images/SnapshootPortfolio1.png" class="bg bg-desktop" alt="an image of art">
         </div>
         
 </div>
@@ -206,7 +206,7 @@
 <section class="card">
     <div class="card-child">
     <div class="card-child-img">        
-        <img src="assets/desktop-images/SnapshootPortfolio2.png" class="bg-desktop" alt="">
+        <img src="assets/desktop-images/SnapshootPortfolio2.png" class="bg-desktop" alt="an image of a designer">
     </div>
     <div class="card-child-content">
     <div class="title"><h1 class="headlineTitle">Facebook 360</h1>
@@ -297,7 +297,7 @@
                 </div>
             </div>
         <div class="card-child-img">        
-            <img src="assets/desktop-images/SnapshootPortfolio3.png" class="bg bg-desktop" alt="">
+            <img src="assets/desktop-images/SnapshootPortfolio3.png" class="bg bg-desktop" alt="an image of a user's dashboard">
         </div>
         
 </div>
@@ -309,7 +309,7 @@
     <section  class="card">
         <div class="card-child">
             <div class="card-child-img">        
-            <img src="assets/Snapshoot2.png" class="bg" alt="">
+            <img src="assets/Snapshoot2.png" class="bg" alt="an image of a woman practicing Yoga">
         </div>
         <div class="card-child-content">
         <div class="title"><h1 class="headlineTitle">Tonic</h1>
@@ -356,7 +356,7 @@
     <section  class="card">
         <div class="card-child">
             <div class="card-child-img"> 
-             <img src="assets/Snapshoot3.png" class="bg" alt="">
+             <img src="assets/Snapshoot3.png" class="bg" alt="an image of art">
         </div>
         <div class="card-child-content">
         <div class="title"><h1 class="headlineTitle">Multi-Post Stories</h1>
@@ -430,8 +430,6 @@
         </ul>
         <a class="last"><p>Get My Resume</p></a>
 
-        <!-- <div class="card-child"> -->
-
     </section>
 </div>
 <div class="card-child-content">
@@ -440,37 +438,37 @@
             <div>
                 <div class="flex1">
                 <h2 class="text">Languages</h2>
-                <img src="assets/Icons/down.png" class= "bg" alt="">
-                <img src="assets/Icons/down.png" class= "bg-desktop" alt="">
+                <img src="assets/Icons/down.png" class= "bg" alt="an icon showing my skilled programming languages">
+                <img src="assets/Icons/down.png" class= "bg-desktop" alt=" an icon showing my skilled programming languages ">
 
                 </div>
                 <section>
                     <div class="languages-box">
                 <div class="flex">
-                    <img src="assets/Ellipse.png" class="bg" alt="">
+                    <img src="assets/Ellipse.png" class="bg" alt="an image showing javascript language">
                     <h3 class="letusconnect">javascript</h3>
                 </div>
                 <div class="flex">
-                    <img src="assets/Ellipse1.png" class="bg" alt="">
+                    <img src="assets/Ellipse1.png" class="bg" alt="an image showing html language">
                     <h3 class="letusconnect">HTML</h3>
                 </div>
                 <div class="flex">
-                    <img src="assets/Ellipse2.png" class="bg" alt="">
+                    <img src="assets/Ellipse2.png" class="bg" alt="an image showing CSS language">
                     <h3 class="letusconnect">CSS</h3>
                 </div>
             </div>
 
             <div class="languages-box-desktop">
                 <div class="flex">
-                    <img src="assets/Ellipse.png" class="bg-desktop languages-img" alt="">
+                    <img src="assets/Ellipse.png" class="bg-desktop languages-img" alt="an image showing javascript language">
                     <h3 class="letusconnect">javascript</h3>
                 </div>
                 <div class="flex">
-                    <img src="assets/Ellipse1.png" class="bg-desktop languages-img" alt="">
+                    <img src="assets/Ellipse1.png" class="bg-desktop languages-img" alt="an image showing html language">
                     <h3 class="letusconnect">HTML</h3>
                 </div>
                 <div class="flex">
-                    <img src="assets/Ellipse2.png" class="bg-desktop languages-img" alt="">
+                    <img src="assets/Ellipse2.png" class="bg-desktop languages-img" alt="an image showing Css language">
                     <h3 class="letusconnect">CSS</h3>
                 </div>
             </div>
@@ -478,15 +476,15 @@
 
                 <div class="flex1">
                     <h2 class="text">Frameworks</h2>
-                    <img src="assets/Right.png" class= "bg" alt="">
-                    <img src="assets/Right.png" class= "bg-desktop" alt="">
+                    <img src="assets/Right.png" class= "bg" alt="a chevron icon which shows my skilled frameworks on click">
+                    <img src="assets/Right.png" class= "bg-desktop" alt="a chevron icon which shows my skilled frameworks on click">
                     </div>
                 </section>  
                 <hr>
                     <div class="flex1">
                         <h2 class="text">Skills</h2>
-                        <img src="assets/Right.png" class= "bg" alt="">
-                        <img src="assets/Right.png" class= "bg-desktop" alt="">
+                        <img src="assets/Right.png" class= "bg" alt="chevron icon">
+                        <img src="assets/Right.png" class= "bg-desktop" alt="chevron icon">
                         </div>
                     <hr>
             </div>
@@ -506,9 +504,12 @@
                          method="POST" 
                          >
                         <ul>
-                            <li><input class="card2 form-field" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" ></li>
-                            <li><input class="card2 form-field" required placeholder="ololadeshot@gmail.com" type="email" name="email" ></li>
-                            <li><textarea class="card3" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
+                            <label for="name" hidden>Fill in your name:</label>
+                            <li><input class="card2 form-field" id="name" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" ></li>
+                            <label for="email" hidden>Fill in your email:</label>
+                            <li><input class="card2 form-field" id="email" required placeholder="ololadeshot@gmail.com" type="email" name="email" ></li>
+                            <label for="message" hidden>Fill in your message:</label>
+                            <li><textarea class="card3" id="message" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
                             <li><button class="last form-field" type="submit">Get In Touch</button></li>
                         </ul>
                         </form>
@@ -528,9 +529,12 @@
                  method="POST" 
                  >
                 <ul>
-                    <li><input class="card2" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" ></li>
-                    <li><input class="card2" required placeholder="ololadeshot@gmail.com" type="email" name="email" ></li>
-                    <li><textarea id="msg" class="card3" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
+                    <label for="name" hidden>Fill in your name:</label>
+                    <li><input class="card2" id="name" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" ></li>
+                    <label for="email" hidden>Fill in your email:</label>
+                    <li><input class="card2" id="email" required placeholder="ololadeshot@gmail.com" type="email" name="email" ></li>
+                    <label for="message" hidden>Fill in your name:</label>
+                    <li><textarea id="msg" class="card3" id="message" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
                     <li><button class="last" type="submit">Get In Touch</button></li>
                 </ul>
               <div class="last-btn">
